--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
       rel="icon"
       href="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
   <body>
@@ -71,14 +77,17 @@
         <h3>work</h3>
         <div class="images">
           <img
+            class="image"
             src="https://fr.w3docs.com/uploads/media/book_gallery/0001/02/849d4286475e04155fd5f21861f16f53db95ac72.png"
             alt="404"
           />
           <img
+            class="image"
             src="https://fr.w3docs.com/uploads/media/book_gallery/0001/02/849d4286475e04155fd5f21861f16f53db95ac72.png"
             alt="404"
           />
           <img
+            class="image"
             src="https://fr.w3docs.com/uploads/media/book_gallery/0001/02/849d4286475e04155fd5f21861f16f53db95ac72.png"
             alt="404"
           />
